--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,9 @@ __debug_bin*
 # Enterprise reporting fonts
 /public/fonts/dejavu
 
+# Swagger intermediate file
+/public/api-spec.json
+
 # Enterprise devenv
 /devenv/docker/blocks/grafana-enterprise
 /devenv/docker/blocks/saml-enterprise
