--- a/.drone.yml
+++ b/.drone.yml
@@ -439,6 +439,11 @@ steps:
   - go run scripts/modowners/modowners.go check go.mod
   image: golang:1.20.8-alpine
   name: validate-modfile
+- commands:
+  - apk add --update make
+  - make validate-api-spec
+  image: golang:1.20.8-alpine
+  name: validate-openapi-spec
 trigger:
   event:
   - pull_request
@@ -1623,6 +1628,11 @@ steps:
   - go run scripts/modowners/modowners.go check go.mod
   image: golang:1.20.8-alpine
   name: validate-modfile
+- commands:
+  - apk add --update make
+  - make validate-api-spec
+  image: golang:1.20.8-alpine
+  name: validate-openapi-spec
 - commands:
   - ./bin/build verify-drone
   depends_on:
@@ -4202,6 +4212,6 @@ kind: secret
 name: gcr_credentials
 ---
 kind: signature
-hmac: b7009bea932e621db567d1d9da72bd69d408c304585255e1c297dd63d60d956c
+hmac: 0b878d482338e27f3b8208271c974aa6c9cce0c4785eec59cf338464665b9ab5
 
 ...
