Feature Toggles API: Trigger webhook call when updating

--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -1678,6 +1678,9 @@ allow_editing = false
 # Allow customization of URL for the controller that manages feature toggles
 update_controller_url =
 
+# Allow configuring an auth token for feature management update requests
+update_controller_token =
+
 # Hides specific feature toggles from the feature management page
 hidden_toggles =
 
