--- a/conf/sample.ini
+++ b/conf/sample.ini
@@ -1546,6 +1546,8 @@
 ;allow_editing = false
 # Allow customization of URL for the controller that manages feature toggles
 ;update_controller_url =
+# Allow configuring an auth token for feature management update requests
+;update_controller_token =
 # Hide specific feature toggles from the feature management page
 ;hidden_toggles =
 # Disable updating specific feature toggles in the feature management page
