Split signout_redirect_url into per provider settings

--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -589,6 +589,7 @@ scopes = user:email,read:org
 auth_url = https://github.com/login/oauth/authorize
 token_url = https://github.com/login/oauth/access_token
 api_url = https://api.github.com/user
+signout_redirect_url =
 allowed_domains =
 team_ids =
 allowed_organizations =
@@ -616,6 +617,7 @@ scopes = openid email profile
 auth_url = https://gitlab.com/oauth/authorize
 token_url = https://gitlab.com/oauth/token
 api_url = https://gitlab.com/api/v4
+signout_redirect_url =
 allowed_domains =
 allowed_groups =
 role_attribute_path =
@@ -642,6 +644,7 @@ scopes = openid email profile
 auth_url = https://accounts.google.com/o/oauth2/v2/auth
 token_url = https://oauth2.googleapis.com/token
 api_url = https://openidconnect.googleapis.com/v1/userinfo
+signout_redirect_url =
 allowed_domains =
 hosted_domain =
 skip_org_role_sync = false
@@ -688,6 +691,7 @@ client_secret =
 scopes = openid email profile
 auth_url = https://login.microsoftonline.com/<tenant-id>/oauth2/v2.0/authorize
 token_url = https://login.microsoftonline.com/<tenant-id>/oauth2/v2.0/token
+signout_redirect_url =
 allowed_domains =
 allowed_groups =
 allowed_organizations =
@@ -715,6 +719,7 @@ scopes = openid profile email groups
 auth_url = https://<tenant-id>.okta.com/oauth2/v1/authorize
 token_url = https://<tenant-id>.okta.com/oauth2/v1/token
 api_url = https://<tenant-id>.okta.com/oauth2/v1/userinfo
+signout_redirect_url =
 allowed_domains =
 allowed_groups =
 role_attribute_path =
@@ -751,6 +756,7 @@ team_ids_attribute_path =
 auth_url =
 token_url =
 api_url =
+signout_redirect_url =
 teams_url =
 allowed_domains =
 allowed_groups =
@@ -801,6 +807,7 @@ auto_sign_up = false
 url_login = false
 allow_assign_grafana_admin = false
 skip_org_role_sync = false
+signout_redirect_url =
 
 #################################### Auth LDAP ###########################
 [auth.ldap]
