--- a/conf/sample.ini
+++ b/conf/sample.ini
@@ -578,6 +578,7 @@
 ;auth_url = https://github.com/login/oauth/authorize
 ;token_url = https://github.com/login/oauth/access_token
 ;api_url = https://api.github.com/user
+;signout_redirect_url =
 ;allowed_domains =
 ;team_ids =
 ;allowed_organizations =
@@ -599,6 +600,7 @@
 ;auth_url = https://gitlab.com/oauth/authorize
 ;token_url = https://gitlab.com/oauth/token
 ;api_url = https://gitlab.com/api/v4
+;signout_redirect_url =
 ;allowed_domains =
 ;allowed_groups =
 ;role_attribute_path =
@@ -624,6 +626,7 @@
 ;auth_url = https://accounts.google.com/o/oauth2/v2/auth
 ;token_url = https://oauth2.googleapis.com/token
 ;api_url = https://openidconnect.googleapis.com/v1/userinfo
+;signout_redirect_url =
 ;allowed_domains =
 ;hosted_domain =
 ;skip_org_role_sync = false
@@ -654,6 +657,7 @@
 ;scopes = openid email profile
 ;auth_url = https://login.microsoftonline.com/<tenant-id>/oauth2/v2.0/authorize
 ;token_url = https://login.microsoftonline.com/<tenant-id>/oauth2/v2.0/token
+;signout_redirect_url =
 ;allowed_domains =
 ;allowed_groups =
 ;allowed_organizations =
@@ -675,6 +679,7 @@
 ;auth_url = https://<tenant-id>.okta.com/oauth2/v1/authorize
 ;token_url = https://<tenant-id>.okta.com/oauth2/v1/token
 ;api_url = https://<tenant-id>.okta.com/oauth2/v1/userinfo
+;signout_redirect_url =
 ;allowed_domains =
 ;allowed_groups =
 ;role_attribute_path =
@@ -701,6 +706,7 @@
 ;auth_url = https://foo.bar/login/oauth/authorize
 ;token_url = https://foo.bar/login/oauth/access_token
 ;api_url = https://foo.bar/user
+;signout_redirect_url =
 ;teams_url =
 ;allowed_domains =
 ;team_ids =
