--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -846,6 +846,18 @@ managed_identity_enabled = false
 # Should be set for user-assigned identity and should be empty for system-assigned identity
 managed_identity_client_id =
 
+# Azure AD Workload Identity
+workload_identity_enabled = false
+
+#
+workload_identity_tenant_id =
+
+#
+workload_identity_client_id =
+
+#
+workload_identity_token_file =
+
 # Specifies whether user identity authentication (on behalf of currently signed-in user) should be enabled in datasources
 # that support it (requires AAD authentication)
 # Disabled by default, needs to be explicitly enabled
