chore: add BEP as owners of api-enterprise-spec.json

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -466,6 +466,7 @@ cypress.config.js @grafana/grafana-frontend-platform
 /public/app/features/explore/TraceView/ @grafana/observability-traces-and-profiling
 
 /public/api-merged.json @grafana/backend-platform
+/public/api-enterprise-spec.json @grafana/backend-platform
 /public/openapi3.json @grafana/backend-platform
 /public/app/angular/ @torkelo
 /public/app/app.ts @grafana/frontend-ops
