--- a/packages/grafana-data/package.json
+++ b/packages/grafana-data/package.json
@@ -58,7 +58,7 @@
     "string-hash": "^1.1.3",
     "tinycolor2": "1.6.0",
     "tslib": "2.6.0",
-    "uplot": "leeoniya/uPlot#69bbad5bd00e84f6b45e8c0236e251de65374e45",
+    "uplot": "1.6.26",
     "xss": "^1.0.14"
   },
   "devDependencies": {
