--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -501,6 +501,7 @@ cypress.config.js @grafana/grafana-frontend-platform
 /scripts/trigger_windows_build.sh @grafana/grafana-delivery
 /scripts/cleanup-husky.sh @grafana/frontend-ops
 /scripts/verify-repo-update/ @grafana/grafana-delivery
+scripts/generate-icon-bundle.js @grafana/plugins-platform-frontend @grafana/grafana-frontend-platform
 
 /scripts/webpack/ @grafana/frontend-ops
 /scripts/generate-a11y-report.sh @grafana/grafana-frontend-platform
